--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Favicon & Styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="/images/fav-icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style3.css" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://vendography.com/" />
@@ -68,7 +68,7 @@
               Choose us for the best vending solutions in Telangana.
             </p>
             <div class="hero-buttons">
-              <a class="btn call-btn quote-btn">Get a quote</a>
+              <a class="btn call-btn quote-btn">I'm Interested </a>
               <a href="/images/Vendography (2).pdf" class="btn btn-outline" download="Vendography-Vending-Machines-Brochure">Download Brochure</a>
             </div>
           </div>
@@ -518,7 +518,7 @@
           <i class="fas fa-phone-alt"></i> Call Now
         </a>
         <button class="cta-btn cta-btn-secondary quote-btn">
-          <i class="fas fa-envelope"></i> Get a Quote
+          <i class="fas fa-envelope"></i> I'm Interested
         </button>
       </div>
     </div>
@@ -589,7 +589,7 @@
         <h3 class="footer-title">Contact Us</h3>
         <ul class="contact-info">
           <li><i class="fas fa-map-marker-alt"></i> 148 old ag.colony kadru near kadru overbridge ranchi 834001</li>
-          <li><i class="fas fa-phone"></i> <a href="tel:+919876543210">+91 8434971848</a></li>
+          <li><i class="fas fa-phone"></i> <a href="tel:+919876543210">+91 9031277007</a></li>
           <li><i class="fas fa-envelope"></i> <a href="mailto:info@fraxotic.com">info@vendography.com</a></li>
           <li><i class="fas fa-clock"></i> Mon-Sat: 9:00 AM - 6:00 PM</li>
         </ul>
@@ -610,6 +610,6 @@
 </footer>
      
 
-    <script src="main2.js"></script>
+    <script src="main3.js"></script>
   </body>
 </html>
